--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,130 @@
-alpaca-trade-api
-lumibot
-transformers
-torch
-pandas
-numpy
+aiohttp==3.8.6
+aiosignal==1.3.1
+alpaca-trade-api==3.2.0
+alpha_vantage==3.0.0
+annotated-types==0.5.0
+async-timeout==4.0.3
+asynctest==0.13.0
+attrs==23.2.0
+Babel==2.14.0
+backcall==0.2.0
+bcrypt==4.2.0
+beautifulsoup4==4.12.3
+bidict==0.22.1
+blinker==1.6.3
+certifi==2024.7.4
+charset-normalizer==3.3.2
+click==8.1.7
+cycler==0.11.0
+decorator==5.1.1
+deprecation==2.1.0
+dnspython==2.3.0
+email-validator==2.0.0.post2
+exceptiongroup==1.2.2
+exchange-calendars==3.6.3
+filelock==3.12.2
+Flask==2.2.5
+Flask-BabelEx==0.9.4
+Flask-Login==0.6.3
+Flask-Mail==0.9.1
+flask-marshmallow==0.15.0
+Flask-Principal==0.4.0
+Flask-Security==3.0.0
+Flask-SocketIO==5.3.6
+Flask-SQLAlchemy==3.0.5
+Flask-WTF==1.1.1
+fonttools==4.38.0
+frozendict==2.4.4
+frozenlist==1.3.3
+fsspec==2023.1.0
+greenlet==3.0.3
+h11==0.14.0
+html5lib==1.1
+huggingface-hub==0.16.4
+ibapi==9.81.1.post1
+idna==3.7
+importlib-metadata==6.7.0
+inflection==0.5.1
+iniconfig==2.0.0
+ipython==7.34.0
+itsdangerous==2.1.2
+jedi==0.19.1
+Jinja2==3.1.4
+kiwisolver==1.4.5
+korean-lunar-calendar==0.3.1
+lumibot==1.5.4
+lxml==5.2.2
+MarkupSafe==2.1.5
+marshmallow==3.19.0
+marshmallow-sqlalchemy==0.29.0
+matplotlib==3.5.3
+matplotlib-inline==0.1.6
+more-itertools==9.1.0
+msgpack==1.0.3
+multidict==6.0.5
+multitasking==0.0.11
+numpy==1.21.6
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+packaging==24.0
+pandas==1.3.5
+pandas-datareader==0.10.0
+pandas-market-calendars==3.4
+parso==0.8.4
+passlib==1.7.4
+peewee==3.17.6
+pexpect==4.9.0
+pickleshare==0.7.5
+Pillow==9.5.0
+platformdirs==4.0.0
+plotly==5.18.0
+pluggy==1.2.0
+prompt_toolkit==3.0.47
+ptyprocess==0.7.0
+pydantic==2.5.3
+pydantic_core==2.14.6
+Pygments==2.17.2
+pyluach==2.2.0
+pyparsing==3.1.2
+pytest==7.4.4
+python-dateutil==2.9.0.post0
+python-engineio==4.9.1
+python-socketio==5.11.0
+pytz==2024.1
+PyYAML==6.0.1
+Quandl==3.7.0
+QuantStats==0.0.62
+regex==2024.4.16
+requests==2.31.0
+safetensors==0.4.3
+scipy==1.7.3
+seaborn==0.12.2
+simple-websocket==1.0.0
+six==1.16.0
+soupsieve==2.4.1
+speaklater==1.3
+SQLAlchemy==2.0.31
+tabulate==0.9.0
+tenacity==8.2.3
+timedelta==2020.12.3
+tokenizers==0.13.3
+tomli==2.0.1
+toolz==0.12.1
+torch==1.13.1
+tqdm==4.66.4
+traitlets==5.9.0
+transformers==4.30.2
+typing_extensions==4.7.1
+urllib3==1.26.19
+wcwidth==0.2.13
+webencodings==0.5.1
+websocket-client==1.6.1
+websockets==10.4
+Werkzeug==2.2.3
+wsproto==1.2.0
+WTForms==3.0.1
+yarl==1.9.4
+yfinance==0.2.41
+zipp==3.15.0
